app/assets/stylesheets/zammad.scss
/* ... */
        .attachment-delete .icon {
          fill: hsl(198,18%,72%);
          width: 9px;
          height: 9px;
          margin-right: 5px;
        }

    .attachmentPlaceholder-inputHolder {
      position: relative;
      display: inline-block;
      overflow: hidden;
      vertical-align: bottom;
      pointer-events: auto;
      @extend .u-highlight;
    }

    .attachmentUpload {
      color: hsl(198,19%,72%);
    }

    .attachmentUpload-cancel {
      @extend .u-clickable;
      margin-left: auto;
      text-decoration: underline;
    }

    .attachmentUpload .icon {
      fill: hsl(198,18%,72%);
      width: 9px;
      height: 9px;
      margin-right: 5px;
    }

    .attachmentUpload-progressBar {
      position: absolute;
      height: 4px;
      background: hsl(202,66%,55%);
      left: 0;
      bottom: 0;
    }

.tabsSidebar-tabsSpacer {
  padding-right: 62px !important;
}

.tabsSidebar-sidebarSpacer {
  margin-right: $sidebarWidth;
  transition: margin 500ms;
}

.tabsSidebar-sidebarSpacer.is-closed {
  margin-right: 0;
}

.tabsSidebar-holder {
  overflow: hidden;
  position: relative;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.tabsSidebar .sidebar {
  width: $sidebarWidth;
  border-left: 1px solid #e6e6e6;
  padding: 0;
}

  .tabsSidebar .sidebar > hr {
    margin: 20px;
  }

  .tabsSidebar .sidebar-header {
    display: flex;
    align-content: stretch;
    position: relative;
    margin: 0 20px;
    
    + hr {
      margin-top: 0;
    }
  }

  .sidebar-header-headline {
    padding: 33px 0 17px 25px;
    margin: 0 0 0 -20px;
    line-height: 1;
    padding-right: 8px;
    @extend .u-clickable, .u-textTruncate;
  }

  .sidebar-header-actions {
    flex: 1;
    margin-right: 5px;
    display: flex;
    align-items: center;
    
    .dropdown {
      flex: 1;
      position: static;
    }
    
    .dropdown-toggle {
      padding-top: 38px;
      padding-bottom: 24px;
    }
  }

  .tabsSidebar-close {
    padding: 27px 35px 12px 0;
    margin: 0 -20px 0 0;
    @extend .u-clickable;
    display: flex;
    align-items: center;
    justify-content: center;
    
    .icon {
      fill: black;
    }
  }

  .tabsSidebar .sidebar-content {
    padding: 0 20px 20px;
  }

  .sidebar.bottom-form-shadow {
    box-shadow: 
      0 -1px rgba(0,0,0,.005) inset,
      0 -2px rgba(0,0,0,.005) inset,
      0 -3px rgba(0,0,0,.005) inset,
      0 -4px rgba(0,0,0,.005) inset;
  }

  .tabsSidebar {
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    transition: 500ms;

    &.tabsSidebar--attributeBarSpacer {
      bottom: 60px;
    }
  }

  .tabsSidebar.is-closed {
    transform: translateX($sidebarWidth);
  }

  .tabsSidebar-tabs {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: absolute;
    left: -55px;
    top: 0;
    bottom: 0;
    pointer-events: none;
  }

  .test {
    position: absolute;
    width: 100%;
  }

  .tabsSidebar-tab {
    width: 56px;
    height: 60px;
    background: hsl(197,20%,93%);
    position: relative;
    border-top: 1px solid hsl(202,12%,87%);
    @extend .u-clickable;
    pointer-events: auto;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .tabsSidebar-tab.is-changed:before {
    position: absolute;
    content: '';
    left: -3px;
    width: 6px;
    height: 6px;
    top: 50%;
    margin-top: -3px;
    border-radius: 100%;
    background: hsl(198,19%,72%);
    box-shadow: 0 0 0 2px hsl(210,17%,98%);
  }

  .tabsSidebar-tab:first-child {
    border-top-left-radius: 8px;
    border-top: none;
  }

  .tabsSidebar-tab:last-child {
    border-bottom-left-radius: 8px;
  }

  .tabsSidebar-tab .icon {
    width: 24px;
    height: 24px;
    fill: hsl(197,19%,78%);
  }

  .tabsSidebar-tab.active .icon {
    fill: hsl(206,7%,37%);
  }

  .sidebar .text-muted {
    color: hsl(198,19%,72%);
  }

.alert {
  padding: 10px 15px 8px;
  border-radius: 3px;
  color: white;
  border: none;
  
  &.alert--info {
    background: hsl(203,65%,55%);
  }

  &.alert--success {
    background: hsl(145,51%,45%);
  }

  &.alert--warning {
    color: hsl(45,98%,17%);
    background: hsl(45,98%,63%);
  }

  &.alert--danger {
    background: hsl(11,85%,48%);
  }
}

.tags,
.links {
  margin: 20px 0;
}

.list {
  padding: 0;
  margin-bottom: 5px;
}

  .list-title {
    margin-top: 7px;
    margin-bottom: 4px;
    text-transform: uppercase;
    color: hsl(198,19%,84%);
    display: block;
    font-size: 12px;
    font-weight: normal;
    letter-spacing: 0.05em;
  }

  .list-item {
    display: flex;
    align-items: center;
    color: hsl(206,7%,28%);
    border-bottom: 1px solid hsl(240,4%,95%);
  }

  .list-item-name {
    flex: 1;
    padding: 4px 1px;
  }

  .list-item-delete {
    padding: 0 10px;
    margin-right: -3px;
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: stretch;
    @extend .u-clickable;
    
    .icon {
      width: 9px;
      height: 9px;
      fill: hsl(0,0%,82%);
    }
  }

    .list-item-delete:hover .icon {
      fill: hsl(1,77%,47%);
    }

.ticket-id {
  color: white;
  background: hsl(198,19%,72%);
  font-size: 11px;
  border-radius: 7px;
  padding: 0 5px;
  margin-right: 2px;
}

.attributeBar {
  height: 60px;
  background: white;
  transition: margin 250ms;
  flex-shrink: 0;
  padding: 10px;
  display: flex;
  justify-content: flex-end;
  
  &.is-closed {
    margin-bottom: -60px;
  }
}

.newTicket {
  padding: 14px 34px;
}

  .newTicket .sidebar {
    width: 290px;
  }
  .newTicket .form-control:not(:focus):not(.focus) {
    border-color: hsl(0,0%,90%);
  }
  .newTicket .article-form-top {
    margin-top: 15px;
  }

.box {
  background: white;
  margin: 20px 0;
  border: 1px solid #e6e6e6;
  padding: 20px 24px;
}

  .box.box--newTicket {
    max-width: 658px;
    margin-left: auto;
    margin-right: auto;
  }

  .box .page-header {
    text-align: center;
    margin-bottom: 12px;
  }
/* ... */

